basic server and ui created

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI = mongodb+srv://saswatm2706:6rGx3FeeqiFI2TN8@emcluster.3ugii.mongodb.net/?retryWrites=true&w=majority&appName=EMCluster
+MONGO_URI = mongodb+srv://saswatm2706:6rGx3FeeqiFI2TN8@emcluster.3ugii.mongodb.net/event-management?retryWrites=true&w=majority&appName=EMCluster
 PORT = 8000
