--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
     "nodemon": "^3.1.9",
+    "react-router-dom": "^7.1.5",
     "socket.io": "^4.8.1"
   }
 }
